# fprime-system-reference

SystemReference/: CMakeLists.txt  README.md  settings.ini
SystemReference/Gnc/: CMakeLists.txt
SystemReference/Gnc/Gps/: CMakeLists.txt  Gps.cpp  Gps.fpp  Gps.hpp
SystemReference/Gnc/Gps/docs/: sdd.md
SystemReference/Gnc/Gps/test/ut/: TestMain.cpp  Tester.cpp  Tester.hpp
SystemReference/Gnc/GpsPort/: CMakeLists.txt  GpsPort.fpp
SystemReference/Gnc/Imu/: Imu.cpp  Imu.fpp  Imu.hpp
SystemReference/Gnc/Imu/docs/: IntegrationGuide.md  sdd.md
SystemReference/Gnc/Imu/test/ut/: Tester.cpp  Tester.hpp
SystemReference/Payload/: CMakeLists.txt
SystemReference/Payload/Camera/: CMakeLists.txt  Camera.cpp  Camera.fpp  Camera.hpp  Capture.c  Capture.cpp  Capture.h
SystemReference/Payload/Camera/docs/: sdd.md
SystemReference/Payload/Camera/test/ut/: CaptureMock.c  CaptureMock.h  TestMain.cpp  Tester.cpp  Tester.hpp  capture_mock.c
SystemReference/Payload/ImagePort/: CMakeLists.txt  ImagePort.fpp
SystemReference/Payload/ImageProcessor/: CMakeLists.txt  ImageProcessor.cpp  ImageProcessor.fpp  ImageProcessor.hpp
SystemReference/Payload/ImageProcessor/docs/: sdd.md
SystemReference/Payload/ImageProcessor/test/ut/: TestMain.cpp  Tester.cpp  Tester.hpp
SystemReference/Payload/PhotoConverter/: CMakeLists.txt  PhotoConverter.cpp  PhotoConverter.fpp  PhotoConverter.hpp
SystemReference/Payload/ProcessImage/: CMakeLists.txt  PhotoConverter.cpp  PhotoConverter.fpp  PhotoConverter.hpp
SystemReference/Top/: CMakeLists.txt  SystemReferenceTopologyDefs.hpp  instances.fpp  topology.fpp
